--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+
+    flex-direction: column;
+}
+
+h1{
+    margin-bottom: 3rem;
+    font-size: 47px;
 }
 
 .game{
